force-app/main/default/objects/Knowledge__kav/fields/Documents__c.field-meta.xml
<CustomField>
    <fullName>Documents__c</fullName>
    <description>Links to documents of installation videos</description>
    <inlineHelpText>Links to documents of installation videos</inlineHelpText>
    <label>Documents and Videos</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>