force-app/main/default/objects/Knowledge__kav/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <description>Details of product pricing or cost</description>
    <label>Pricing</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>