force-app/main/default/objects/Knowledge__kav/fields/Product_Highlights__c.field-meta.xml
<CustomField>
    <fullName>Product_Highlights__c</fullName>
    <label>Product Highlights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>